--- a/dicts/simp.dict.yaml
+++ b/dicts/simp.dict.yaml
@@ -30,7 +30,7 @@
 # 降低一些几乎只在一个固定词汇中使用的读音的权重，不让其参与注音，在 base 中手动注音。
 ---
 name: 8105
-version: "2023-04-08"
+version: "2023-04-14"
 sort: by_weight
 ...
 ### 按需启用
@@ -46,6 +46,7 @@ sort: by_weight
 嬢	niang	1
 薙	ti	1
 菈	la	1
+卻	que	1
 # 注释掉的这几行已经加入到下面并调整到合适的权重了
 # 〇	ling
 # 囧	jiong
@@ -1600,7 +1601,7 @@ sort: by_weight
 墦	fan	13
 𫔍	fan	0
 𬸪	fan	0
-放	fang	1730745
+放	fang	7730745
 房	fang	980289
 防	fang	406226
 方	fang	347176
@@ -2603,17 +2604,17 @@ sort: by_weight
 记	ji	1094800
 季	ji	1028550
 击	ji	1010628
+急	ji	1009907
 奇	ji	982596
 系	ji	942245
 即	ji	900101
-急	ji	849907
+既	ji	853256
 极	ji	832554
 计	ji	747431
 激	ji	535171
 继	ji	503302
 基	ji	499224
 己	ji	456925
-既	ji	453256
 际	ji	352008
 纪	ji	335852
 技	ji	326479
@@ -2767,6 +2768,7 @@ sort: by_weight
 剑	jian	1151704
 件	jian	935235
 建	jian	598616
+键	jian	510933
 渐	jian	503123
 简	jian	501969
 坚	jian	385150
@@ -2778,7 +2780,6 @@ sort: by_weight
 健	jian	168908
 检	jian	140353
 减	jian	131292
-键	jian	110933
 奸	jian	97555
 艰	jian	82206
 兼	jian	68324
@@ -4526,7 +4527,6 @@ sort: by_weight
 粘	nian	1
 娘	niang	603856
 酿	niang	22424
-嬢	niang	1
 鸟	niao	178842
 尿	niao	42861
 袅	niao	16381
