--- a/weasel.custom.yaml
+++ b/weasel.custom.yaml
@@ -13,6 +13,7 @@ patch:
       candidate_spacing: 24
       round_corner: 0
     color_scheme: ayaya
+  # "style/horizontal": true 小狼毫主题设置中除颜色外的设置可能不生效，复制到这里后就可以，只需要复制带引号的那些行
 
   preset_color_schemes:
     ayaya:
@@ -171,3 +172,67 @@ patch:
       border_height: 4            # 窗口上下高度
       border_width: 4             # 窗口左右宽度
       border_color_width: 0       # 输入条边框宽度
+      
+    win10_weasel:
+      # 适配 Windows 小狼毫的方案，鼠须管和小狼毫皮肤部分不通用
+      # name: win10_weasel
+      author: "luminosa"
+      back_color: 0xF3F3F3                      # 背景颜色 颜色均取色自 Windows 10 默认
+      border_color: 0xDBDCDC                    # 边框颜色
+      candidate_text_color: 0x000000            # 候选文字颜色
+      hilited_candidate_back_color: 0xFFD8A6    # 高亮颜色
+      hilited_label_color: 0x6F6F6F             # 高亮序号颜色
+      hilited_mark_color: 0x00000000            # 此项不生效
+      label_color: 0x6F6F6F                     # 候选数字颜色
+      shadow_color: 0x40FDFDFD                  # 阴影颜色
+      text_color: 0x000000                      # 拼音文字颜色
+      
+      "style/capture_by_click": true            # 若无法生效，请将以下均复制到最上面。引号可以不加，小狼毫在应用配置后会自动加上
+      "style/font_point": 14                    # 字号，若太大可以自行调整
+      "style/horizontal": true                  # 水平排列
+      "style/inline_preedit": true              # 内嵌编码
+      "style/label_font_point": 14              # 候选数字字号
+      "style/label_format": "%s"                # 候选数字格式
+      "style/layout/border_width": 2            # 候选条边框宽度
+      "style/layout/candidate_spacing": 50      # 候选间距
+      "style/layout/corner_radius": 10          # 候选条圆角，不需要圆角设置为 0
+      "style/layout/hilite_padding": 18         # 高亮高度
+      "style/layout/hilite_spacing": 17         # 候选数字与文字间距，也可在 lable_format 中调整
+      "style/layout/margin_x": 17               # x 横向方向边距
+      "style/layout/margin_y": 17               # y 纵向方向边距
+      "style/layout/round_corner": 0            # 高亮圆角，小狼毫天圆地方此项可设置为 0，也可自行调整
+      "style/layout/shadow_offset_x": 5         # 阴影横向偏离
+      "style/layout/shadow_offset_y": 4         # 阴影纵向偏离
+      "style/layout/shadow_radius": 10          # 阴影圆角
+      "style/layout/spacing": 100               # 此项不生效，仅竖排时有效，即 horizontal: false
+
+     win11_weasel:
+      author: "luminosa"
+      back_color: 0xF9F9F9                      # 背景颜色 颜色均取色自 Windows 10 默认
+      border_color: 0xE7E7E7                    # 边框颜色
+      candidate_text_color: 0x000000            # 候选文字颜色
+      hilited_candidate_back_color: 0xF0F0F0    # 高亮颜色
+      hilited_label_color: 0x727272             # 高亮序号颜色
+      hilited_mark_color: 0xFFD8A6              # 此项生效，前面那|的颜色
+      label_color: 0x727272                     # 候选数字颜色
+      shadow_color: 0x40FDFDFD                  # 阴影颜色
+      text_color: 0x000000                      # 拼音文字颜色
+      
+      "style/capture_by_click": true            # 若无法生效，请将以下均复制到最上面。引号可以不加，小狼毫在应用配置后会自动加上
+      "style/font_point": 14                    # 字号，若太大可以自行调整
+      "style/horizontal": true                  # 水平排列
+      "style/inline_preedit": true              # 内嵌编码
+      "style/label_font_point": 14              # 候选数字字号
+      "style/label_format": "%s"                # 候选数字格式
+      "style/layout/border_width": 2            # 候选条边框宽度
+      "style/layout/candidate_spacing": 50      # 候选间距
+      "style/layout/corner_radius": 14          # 候选条圆角
+      "style/layout/hilite_padding": 6         `# 高亮高度
+      "style/layout/hilite_spacing": 17         # 候选数字与文字间距，也可在 lable_format 中调整
+      "style/layout/margin_x": 17               # x 横向方向边距
+      "style/layout/margin_y": 17               # y 纵向方向边距
+      "style/layout/round_corner": 14           # 高亮圆角
+      "style/layout/shadow_offset_x": 5         # 阴影横向偏离
+      "style/layout/shadow_offset_y": 6         # 阴影纵向偏离
+      "style/layout/shadow_radius": 13          # 阴影圆角
+      "style/layout/spacing": 100               # 此项不生效，仅竖排时有效，即 horizontal: false
