--- a/dicts/simp.dict.yaml
+++ b/dicts/simp.dict.yaml
@@ -22,6 +22,7 @@
 # 删除「著zhuo」（执著zhuo），《现汉》推荐「执着zhuo」。
 # 删除「虾ha」（虾蟆ha ma），《现汉》推荐「蛤蟆」，保留地名「虾蟆陵」。
 # 「嬛」xuan → huan
+# 删除「夹ga」，使用「胳肢窝ga zhi wo」。
 #
 # 多音字权重问题：
 # 在 Rime 的自动注音程序中，权重比小于等于 5% 的多音字不会参与自动注音。
@@ -30,15 +31,13 @@
 # 降低一些几乎只在一个固定词汇中使用的读音的权重，不让其参与注音，在 base 中手动注音。
 ---
 name: 8105
-version: "2023-05-05"
+version: "2023-05-30"
 sort: by_weight
 ...
 ### 按需启用
 # 「这、那」的口语读音
 # 这	zhei	17648808
 # 那	nei	9929703
-# 「贲 ben bi」的 fei 音《现汉》没有收录，《现规》表姓氏。
-# 贲	fei	1
 
 
 ### 扩展，不在《通用规范汉字表》的字:
@@ -47,6 +46,7 @@ sort: by_weight
 薙	ti	1
 菈	la	1
 卻	que	1
+濛	meng	1
 # 注释掉的这几行已经加入到下面并调整到合适的权重了
 # 〇	ling
 # 囧	jiong
@@ -1813,8 +1813,8 @@ sort: by_weight
 旮	ga	3168
 尕	ga	1817
 尜	ga	195
+轧	ga	100
 钆	ga	20
-夹	ga	1
 该	gai	1351318
 改	gai	495567
 盖	gai	229688
@@ -3248,6 +3248,7 @@ sort: by_weight
 莙	jun	15
 晙	jun	6
 筠	jun	1
+隽	jun	1
 鲪	jun	1
 龟	jun	1
 䐃	jun	0
@@ -3378,9 +3379,9 @@ sort: by_weight
 𫸩	kou	0
 苦	ku	810172
 哭	ku	447753
+酷	ku	203579
 库	ku	116418
 裤	ku	116368
-酷	ku	103579
 枯	ku	61044
 骷	ku	39696
 窟	ku	24923
@@ -8422,6 +8423,7 @@ sort: by_weight
 肫	zhun	178
 窀	zhun	41
 衠	zhun	10
+屯	zhun	1
 𬘯	zhun	0
 桌	zhuo	346095
 卓	zhuo	118671
